# dotnet-timespan-python

./: .gitignore  README.md  SUPPORT.md  setup.cfg
src/: dotnet_timespan.py
src/package/: setup.py  timespan.py
src/package/timespan/: pyproject.toml  setup.cfg
src/package/timespan/timespan/: __init__.py  timespan.py
src/package/timespan_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test.py
