[metadata]
name = timespan-python
version = attr: timespan.__version__
author = Mattan Serry
author_email = maserry@microsoft.com
description = A Python module for conversion between .NET TimeSpan objects and Python datetime.timedelta objects
long_description = file: README.md
long_description_content_type = text/markdown
keywords: TimeSpan
license: MIT License
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Topic :: Utilities
    Operating System :: OS Independent
url = https://github.com/microsoft/dotnet-timespan-python

[options]
zip_safe = False
include_package_data = True
package_dir =
    = .
packages = find: